modal and cards settings

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,13 +87,13 @@
                       alt="Tecnoduck website"
                       width="350"
                     />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
                   </div>
-                  <p class="overlay">
-                    Tecnoduck es una plataforma de distribución de coronavirus
-                    de última generación. Las compañías usan esta plataforma
-                    para el espionaje digital y los ataques a los servidores
-                    seguros de la competencia.
-                  </p>
                   <div class="card-body">
                     <h2 class="portfolio-title">Tecnoduck</h2>
                     <p class="portfolio-text">Sitio-Web</p>
@@ -103,158 +103,208 @@
             </div>
 
             <!-- Tarjeta 2 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/design.jpg"
-                  alt="Poster New Orlean vs Golden Star"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">
-                  Póster de Nueva Orleans vs Estrella Dorada
-                </h2>
-                <p class="portfolio-text">Diseño</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/design.jpg"
+                      alt="Poster New Orlean vs Golden Star"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">
+                      Póster de Nueva Orleans vs Estrella Dorada
+                    </h2>
+                    <p class="portfolio-text">Diseño</p>
+                  </div>
+                </a>
+              </li>
+            </div>
 
             <!-- Tarjeta 3 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/applications.jpg"
-                  alt="Seafood Restaurant App"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">Restaurante Seafood</h2>
-                <p class="portfolio-text">Aplicaciones</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/applications.jpg"
+                      alt="Seafood Restaurant App"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">Restaurante Seafood</h2>
+                    <p class="portfolio-text">Aplicaciones</p>
+                  </div>
+                </a>
+              </li>
+            </div>
 
             <!-- Tarjeta 4 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/marketing.jpg"
-                  alt="Project Prime Marketing"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">Proyecto Prime</h2>
-                <p class="portfolio-text">Marketing</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/marketing.jpg"
+                      alt="Project Prime Marketing"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">Proyecto Prime</h2>
+                    <p class="portfolio-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
+            </div>
 
             <!-- Tarjeta 5 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/applications_2.jpg"
-                  alt="Project Boxes App"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">Proyecto Cajas</h2>
-                <p class="portfolio-text">Aplicaciones</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/applications_2.jpg"
+                      alt="Project Boxes App"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">Proyecto Cajas</h2>
+                    <p class="portfolio-text">Aplicaciones</p>
+                  </div>
+                </a>
+              </li>
+            </div>
 
             <!-- Tarjeta 6 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/website_2.jpg"
-                  alt="Inspiration has no Borders"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">La inspiración no tiene límites</h2>
-                <p class="portfolio-text">Sitio-Web</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/website_2.jpg"
+                      alt="Inspiration has no Borders"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">
+                      La inspiración no tiene límites
+                    </h2>
+                    <p class="portfolio-text">Sitio-Web</p>
+                  </div>
+                </a>
+              </li>
+            </div>
 
             <!-- Tarjeta 7 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/design_2.jpg"
-                  alt="Limited Edition Design"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">Edición Limitada</h2>
-                <p class="portfolio-text">Diseño</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/design_2.jpg"
+                      alt="Limited Edition Design"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">Edición Limitada</h2>
+                    <p class="portfolio-text">Diseño</p>
+                  </div>
+                </a>
+              </li>
+            </div>
 
             <!-- Tarjeta 8 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/marketing_2.jpg"
-                  alt="Project LAB MArketing"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">Proyecto LAB</h2>
-                <p class="portfolio-text">Marketing</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/marketing_2.jpg"
+                      alt="Project LAB MArketing"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">Proyecto LAB</h2>
+                    <p class="portfolio-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
+            </div>
 
             <!-- Tarjeta 9 -->
-            <li>
-              <a href="#" class="link">
-                <img
-                  src="images/applications_3.jpg"
-                  alt="Growing Bussines App"
-                  width="350"
-                />
-                <p class="overlay">
-                  Tecnoduck es una plataforma de distribución de coronavirus de
-                  última generación. Las compañías usan esta plataforma para el
-                  espionaje digital y los ataques a los servidores seguros de la
-                  competencia.
-                </p>
-                <h2 class="portfolio-title">Negocio en Crecimiento</h2>
-                <p class="portfolio-text">Aplicaciones</p>
-              </a>
-            </li>
+            <div class="card-container">
+              <li>
+                <a href="#" class="link">
+                  <div class="card-image">
+                    <img
+                      src="images/applications_3.jpg"
+                      alt="Growing Bussines App"
+                      width="350"
+                    />
+                    <p class="overlay">
+                      Tecnoduck es una plataforma de distribución de coronavirus
+                      de última generación. Las compañías usan esta plataforma
+                      para el espionaje digital y los ataques a los servidores
+                      seguros de la competencia.
+                    </p>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="portfolio-title">Negocio en Crecimiento</h2>
+                    <p class="portfolio-text">Aplicaciones</p>
+                  </div>
+                </a>
+              </li>
+            </div>
           </ul>
         </div>
       </section>
